v8.2.0/_sources/generated/pcdsdevices.valve.VVC.rst.txt
pcdsdevices.valve.VVC
=====================

.. currentmodule:: pcdsdevices.valve

.. autoclass:: VVC

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - valve_position
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:POS_STATE_RBV``
          - Ex: OPEN, CLOSED, MOVING, INVALID, OPEN_F
          - hinted
          - Inherited from :class:`~pcdsdevices.valve.ValveBase`
    
        * - open_command
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``:OPN_SW``
          - Epics command to Open valve
          - normal
          - Inherited from :class:`~pcdsdevices.valve.ValveBase`
    
        * - interlock_ok
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:OPN_OK_RBV``
          - Valve is OK to Open interlock 
          - normal
          - Inherited from :class:`~pcdsdevices.valve.ValveBase`
    
        * - open_do
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:OPN_DO_RBV``
          - PLC Output to Open valve, 1 means 24V on command cable
          - normal
          - Inherited from :class:`~pcdsdevices.valve.ValveBase`
    
        * - error_reset
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``:ALM_RST``
          - Reset Error state to valid by toggling this
          - normal
          - Inherited from :class:`~pcdsdevices.valve.ValveBase`
    
        * - override_status
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:OVRD_ON_RBV``
          - Epics Readback on Override mode
          - omitted
          - 
    
        * - override_force_open
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``:FORCE_OPN``
          - Epics Command to force open the valve inoverride mode
          - omitted
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: subscriptions
    
    